--- a/Dessert-hemsida/index.html
+++ b/Dessert-hemsida/index.html
@@ -6,26 +6,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="Style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Display&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <div>
-        <b class="Namn">Nti Delights :)</b>
-      </div>
-      <div>
-        <b class="Inloggning"><u>Inloggning</u></b>
-      </div>
-    </header>
-    <footer>
-      <div class="Downboi">
-        <div class="Middleboi"></div>
-      </div>
-    </footer>
-
-    <div class="three-col-container">
-      <p>dsjklfjsdf</p>
-      <p>sdfsdfsdfds</p>
-      <p>sdfsdfsdfsdf</p>
+    <section class="header">
+      <div class="hej">
+     <p>NTI Delights</p>
     </div>
+      <nav>
+     <div class="nav-links"> 
+       <ul>
+         <li><a href="">Home</a></li>
+         <li><a href="">About us</a></li>
+         <li><a href="">Contact us</a></li>
+         <li><a href="">Premium</a></li>
+       </ul>
+     </div>
+
+    </nav>
+
+    <section class="information-startsida">
+      <h1>Varför just vi</h1>
+      <p>För att vi är TE20D</p>
+      <a href="" class="about-us-knapp">About us</a>
+    </section>
+    </section>
+
+
+  
+
+    
+
   </body>
+
+  
+
 </html>
