--- a/Dessert-hemsida/index.html
+++ b/Dessert-hemsida/index.html
@@ -21,10 +21,10 @@
       <nav>
         <div class="nav-links">
           <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="About-us.html">About us</a></li>
-            <li><a href="">Contact us</a></li>
-            <li><a href="">Premium</a></li>
+            <li><a href="Contact.html">Contact us</a></li>
+            <li><a href="Premium.html">Premium</a></li>
           </ul>
         </div>
       </nav>
