--- a/Dessert-hemsida/index.html
+++ b/Dessert-hemsida/index.html
@@ -15,9 +15,7 @@
   </head>
   <body>
     <section class="header">
-      <div class="hej">
-        <p>NTI Delights</p>
-      </div>
+      <div class="hej"></div>
       <nav>
         <div class="nav-links">
           <ul>
@@ -30,9 +28,17 @@
       </nav>
     </section>
     <section class="information-startsida">
-      <h1>Varför just vi</h1>
-      <p>För att vi är bättre än TE20E</p>
-      <a href="About-us.html" class="about-us-knapp">About us</a>
+      <div class="text-startsida">
+        <h1>Välkommna till NTI Delights</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+          consequuntur alias nesciunt distinctio. Impedit, neque. Numquam
+          commodi ratione, eum magni debitis doloribus rem nemo ab provident
+          voluptas at cupiditate corrupti ullam, asperiores dolore incidunt.
+          Ipsa voluptates maxime rem pariatur nesciunt.
+        </p>
+        <a href="About-us.html" class="">Varför är vi bättre än TE20E?</a>
+      </div>
     </section>
   </body>
 </html>
