--- a/Dessert-hemsida/index.html
+++ b/Dessert-hemsida/index.html
@@ -31,7 +31,8 @@
         <h1>Välkommna till NTI Delights</h1>
         <p>
           Vi är ett litet företag med få arbetare som i grund och botten har
-          syfte till att klå TE20E
+          syfte till att <br />
+          klå TE20E
         </p>
         <a href="About-us.html" class="knapp-start"
           >Varför är vi bättre än TE20E?</a
@@ -39,7 +40,7 @@
       </div>
     </section>
     <section class="erbjuder">
-      <h1>Vad erbjuder vi</h1>
+      <h1>Vad erbjuder vi?</h1>
       <p>Något som TE20E inte kan göra ;)</p>
       <div class="rad">
         <div class="Vad-erbjuder-vi">
@@ -95,7 +96,7 @@
     </section>
 
     <section class="Undrar">
-      <h1>Om du undrar över något, feel free to ask</h1>
+      <h1>Om du undrar över något, kom till oss inte TE20E!</h1>
       <a href="Contact.html" class="knapp-start">Contact us</a>
     </section>
   </body>
